syntax = "proto3";

package plugins;

import "ptypes/empty/empty.proto";

enum PluginCapability {
    CONNECTION = 0;
}

message PluginInfo {
    string name = 1;
    string endpoint = 2;
    repeated PluginCapability capabilities = 3;
}

service PluginRegistry {
    rpc Register (PluginInfo) returns (google.protobuf.Empty);
    // RequestLiveness is a stream initiated by NSM to inform the client that NSM is still alive and
    // no re-registration is required. Detection a failure on this "channel" will mean
    // that NSM is gone and the client needs to start re-registration logic.
    rpc RequestLiveness (stream google.protobuf.Empty) returns (stream google.protobuf.Empty);
}
